# SpriteRenderer

./: CMakeLists.txt  clean.sh  run.sh
src/: main.cpp
src/Game/: game.cpp  game.h  stexture.cpp
src/Math/: math.cpp
